tests/transpiler/x/zig/closure.error
run: exit status 1
/workspace/mochi/tests/transpiler/x/zig/closure.zig:4:14: error: unused function parameter
fn makeAdder(n: i64) i64 {
             ^
/workspace/mochi/tests/transpiler/x/zig/closure.zig:9:16: error: use of undeclared identifier 'n'
    return x + n;
               ^
/workspace/mochi/tests/transpiler/x/zig/closure.zig:14:15: error: root source file struct 'Io' has no member named 'getStdOut'
    try std.io.getStdOut().writer().print("{any}\n", .{add10(7)});
        ~~~~~~^~~~~~~~~~
/tmp/zig/lib/std/Io.zig:1:1: note: struct declared here
const std = @import("std.zig");
^~~~~
referenced by:
    callMain [inlined]: /tmp/zig/lib/std/start.zig:668:22
    callMainWithArgs [inlined]: /tmp/zig/lib/std/start.zig:637:20
    posixCallMainAndExit: /tmp/zig/lib/std/start.zig:592:36
    2 reference(s) hidden; use '-freference-trace=5' to see all references
